Temporary styling for idex page to prevent white space if there is no content.

--- a/src/scss/_global-styling.scss
+++ b/src/scss/_global-styling.scss
@@ -31,6 +31,11 @@ a {
     width: 100%;
 }
 
+.content-area-home,
+.site-main-home {
+    min-height: 0;
+}
+
 .vmc-standard-post,
 .vmc-slider,
 .vmc-policy-posts,
@@ -319,6 +324,10 @@ a {
     .content-area,
     .site-main {
         min-height: $heightDesktop;
+    }
+    .content-area-home,
+    .site-main-home {
+        min-height: 0;
     }
     .vmc-slider {
         height: calc(100vh - 80px);
